<resources>
    <string name="app_name">MovieApp</string>

    <!--Authentication Activity-->
    <string name="auth_activity_access_more_text">Access with more an account</string>
    <string name="auth_activity_login_to_an_account_text">Login to an account so you could access more features</string>
    <string name="auth_activity_login_text">Login</string>
    <string name="auth_activity_signup_text">Sign Up</string>
    <string name="auth_activity_do_not_have_account_text">Don\'t have an account?</string>
    <string name="auth_activity_already_have_account_text">Already have an account?</string>

    <!--Authentication Options Activity - login-->
    <string name="auth_activity_login_welcome_back_text">Welcome Back</string>
    <string name="auth_activity_login_login_welcome_text">I am happy to see you again. You can login for more features.</string>
    <string name="auth_activity_login_kindly_register_text">Kindly register to continue for more features.</string>
    <string name="auth_activity_login_email_username_text">Email</string>
    <string name="auth_activity_login_password_text">Password</string>
    <string name="auth_activity_login_successful_text">Login successful!</string>
    <string name="auth_activity_login_failed_text">Login failed! Please try again later</string>

    <!--Authentication Options Activity - sign up-->
    <string name="auth_activity_sign_up_email_text">Email</string>
    <string name="auth_activity_sign_up_password_text">Password</string>
    <string name="auth_activity_sign_up_email_error_text">Invalid email format</string>
    <string name="auth_activity_sign_up_password_error_text">Password must contain at least one special character, one letter and one number, 8–16 length</string>
    <string name="auth_activity_sign_up_successful_text">Registration successful!</string>
    <string name="auth_activity_sign_up_failed_text">Registration failed! Please try again later</string>

    <!--Movie List Activity-->
    <string name="movie_list_activity_search_movie_text">Search Movie</string>

    <!--Movie Detail Activity-->
    <string name="movie_detail_activity_movie_title_with_year_text">%s(%s)</string>
    <string name="movie_detail_activity_total_ratings_text">%s ratings</string>
    <string name="movie_detail_activity_plot_summary_text">Plot Summary</string>
    <string name="movie_detail_activity_other_rating_text">Other Ratings</string>
</resources>