<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/auth_activity_login_welcome_back_text"
        android:textSize="24sp"
        android:textColor="@color/blue_006A"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/auth_activity_login_login_welcome_text"
        android:textColor="@color/light_grey_a5"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/auth_activity_login_email_username_text"
        app:hintTextColor="@color/light_grey_a5"
        android:textColorHint="@color/light_grey_a5"
        app:boxStrokeColor="@color/blue_006A"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditTextEmailUsername"
            android:textColor="@color/black_32"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOutlinedPasswordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/auth_activity_login_password_text"
        app:hintTextColor="@color/light_grey_a5"
        android:textColorHint="@color/light_grey_a5"
        app:boxStrokeColor="@color/blue_006A"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditTextPassword"
            android:textColor="@color/black_32"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>