<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutViewPager"
        android:layout_above="@+id/layoutButtonContainer"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackIcon"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/blue_006A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerAuthenticationContent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtonContainer"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAuthenticationLogin"
            android:text="@string/auth_activity_login_text"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/bg_button_blue_radius"
            app:backgroundTint="@null"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAccountExistedQuestion"
                android:text="@string/auth_activity_do_not_have_account_text"
                android:textSize="12sp"
                android:textColor="@color/black_32"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtLoginSignUp"
                android:text="@string/auth_activity_signup_text"
                android:textSize="12sp"
                android:textColor="@color/blue_006A"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>